--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,19 +29,19 @@ android {
 }
 
 dependencies {
-    implementation 'com.github.bumptech.glide:volley-integration:4.9.0'
+
+    implementation 'com.mcxiaoke.volley:library-aar:1.0.0'
     implementation 'com.google.android.gms:play-services-maps:17.0.1'
     implementation 'com.github.barteksc:android-pdf-viewer:2.8.2'
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'androidx.vectordrawable:vectordrawable:1.1.0'
     implementation 'androidx.navigation:navigation-fragment:2.3.5'
     implementation 'androidx.navigation:navigation-ui:2.3.5'
-    implementation 'com.android.volley:volley:1.2.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.gridlayout:gridlayout:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
     implementation 'com.android.support:design:31.0.2'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.13.2'
@@ -56,6 +56,12 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.github.barteksc:android-pdf-viewer:2.8.2'
     implementation 'com.github.smarteist:autoimageslider:1.4.0'
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+    implementation 'com.nineoldandroids:library:2.4.0'
+    implementation 'com.leo.simplearcloader:simplearcloader:1.0.+'
+
+
+
 
 
 }
