--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,13 +11,16 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".ui.GIS.AppController"
         android:allowBackup="true"
         android:icon="@drawable/logo_apk"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".ui.SamkelToday"></activity>
+        <activity android:name=".ui.MONITOR.Monitoring"></activity>
+        <activity android:name=".info.SamKel.PERIODE.Periode" />
+        <activity android:name=".ui.SamkelToday.SamkelToday" />
         <activity android:name=".info.DataCekPajak" />
         <activity android:name=".TentangAplikasi.Panduan" />
         <activity android:name=".TentangAplikasi.LayananSamsat" />
@@ -43,9 +46,12 @@
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
 
         <activity
-            android:name=".ui.MapsActivity"
+            android:name=".ui.GIS.MapsActivity"
             android:label="GIS PAYMENT POINT" />
         <activity
             android:name=".info.faq.faq"
@@ -57,9 +63,6 @@
         <activity
             android:name=".info.SamKel.lokasi_samkel"
             android:label="Lokasi Samsat Keliling" />
-        <activity
-            android:name=".info.SamKel.PERIODE.Periode"
-            android:label="Periode Samsat Keliling" />
         <activity
             android:name=".info.Pengaduan"
             android:label="Pengaduan" />
