--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,8 @@ android {
 }
 
 dependencies {
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
 
     implementation 'com.mcxiaoke.volley:library-aar:1.0.0'
     implementation 'com.google.android.gms:play-services-maps:17.0.1'
