--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,8 +54,6 @@ dependencies {
     implementation 'com.github.anychart:anychart-android:1.1.4'
     implementation 'com.android.support:multidex:1.0.3'
     implementation 'com.github.denzcoskun:ImageSlideshow:0.0.6'
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.github.barteksc:android-pdf-viewer:2.8.2'
     implementation 'com.github.smarteist:autoimageslider:1.4.0'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
@@ -63,6 +61,10 @@ dependencies {
     implementation 'com.leo.simplearcloader:simplearcloader:1.0.+'
     implementation 'com.github.barteksc:android-pdf-viewer:2.8.2'
 
+    //Retrofit
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.2'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
 
 
